# debug_adapter

./: .gitignore  LICENSE  Makefile  Makefile.am  NEWS.md  README.md  configure.ac  gallery.md  pack.pl  pack.pl.in
.github/workflows/: after_release.yml  cd.yml  ci.yml  ci_stable.yml  ci_windows.yml
elisp/: dap-swi-prolog.el
prolog/: Makefile.am  TODO  client.pl  dap_debugee.pl  dap_server.pl  dap_tracer.pl  main.pl  protocol.pl  server.pl  swipl_debug_adapter.pl  tracer.pl
prolog/debug_adapter/: breakpoint.pl  clause.pl  client.pl  compat.pl  frame.pl  main.pl  protocol.pl  script.pl  sdk.pl  server.pl  session.pl  source.pl  stack.pl  tracer.pl
prolog/swipl_debug_adapter/: frame.pl  source.pl
test/: Makefile.am  server.pl  server.plt  server.plt.in
test/scripts/: bp.ds  breakpointCGC.dapscript  completions.dapscript  evaluate.dapscript  exceptionInfo.dapscript  functionBreakpoint.dapscript  launch.dapscript  next.dapscript  pause.dapscript  restartFrame.dapscript  setBreakpoints.dapscript  setExceptionBreakpoints.dapscript  setFunctionBreakpoints.dapscript  source.dapscript  stackTrace.dapscript  stepIn.dapscript  stepInTargets.dapscript  stepOut.dapscript  threads.dapscript  variables.dapscript  voluntaryTrace.dapscript
